--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "author": "bhavesh bhanusali",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0",
+    "express": "^4.21.2",
+    "mongoose": "^8.14.2",
     "nodemon": "^3.1.10"
   }
 }
