--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "bhavesh bhanusali",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "express": "^4.21.2",
     "mongoose": "^8.14.2",
     "nodemon": "^3.1.10",
